# boilerplate

./: .dockerignore  .env.example  .gitignore  .vale.ini  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.turbo  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.turbo.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
apps/mcp_server/: .env.Example  Dockerfile  README.md  package.json  pyproject.toml  requirements.txt  test_failing_mcp.py
apps/mcp_server/src/: client.py  services.py
apps/mcp_server/src/functions/: clickhouse_crud.py  cockroachdb_crud.py  generate_random_data.py  llm_response.py  phantombuster_client.py  slack_lists.py  slack_mcp_approval.py  slack_notification.py  slack_tool.py  template_from_sample.py  todo_crud.py  update_todos.py  zendesk.py
apps/mcp_server/src/functions/mock_samples/: datadog_logs.py  erp_eci_contact_activities.py  github_pr.py  hello_world.py  kaiser_policy.py  knowledge_base.py  linear_issue.py  linkedin_profiles_post.py  pagerduty_incident.py  powerbi_health.py  salesforce_contact_activities.py  salesforce_contacts.py  zendesk_ticket.py
apps/mcp_server/src/schemas/: datadog_logs.py  github_pr.py  hello_world.py  knowledge_base.py  linear_issue.py  pagerduty_incident.py  zendesk_ticket.py
apps/mcp_server/src/utils/: openai_client.py
apps/mcp_server/src/workflows/: clickhouse_crud.py
apps/mcp_server/src/workflows/tools/: add_agent_tool.py  clickhouse_crud.py  cockroachdb_crud.py  complete_task.py  create_agent.py  create_dataset.py  create_integration_from_remote_mcp.py  create_subtask.py  create_view.py  datadog_logs.py  failing_mcp_test.py  generate_mock.py  github_pr.py  hello_world.py  knowledge_base.py  linear_issue.py  list_integration_tools.py  list_workspace_integrations.py  load_into_dataset.py  mock_ai_integration.py  mock_datadog_logs.py  mock_failing_mcp_test.py  mock_github_pr.py  mock_hello_world.py  mock_knowledge_base.py  mock_linear_issue.py  mock_pagerduty_incident.py  mock_zendesk_ticket.py  pagerduty_incident.py  phantombuster_fetch.py  phantombuster_launch.py  search_remote_mcp_directory.py  slack_bind_channel.py  slack_check_connection.py  slack_connect_channel.py  slack_list_channels.py  test_failures.py  transform_data.py  update_agent.py  update_agent_tool.py  (+10 more)
apps/slack-bot/: .gitignore  Dockerfile  README.md  SETUP.md  manifest.json  package.json  pyproject.toml
apps/slack-bot/src/: __init__.py  app.py  client.py  config.py  database.py  http_receiver.py  runner.py  server.py  services.py
apps/slack-bot/src/bot_services/: __init__.py  agent_resolver.py  channel_router.py  lifecycle.py  onboarding.py  slack_oauth.py  task_manager.py
apps/slack-bot/src/bot_services/concierge/: SKILL.md  __init__.py  agent.py  rate_limit.py  tools.py
apps/slack-bot/src/listeners/: __init__.py
apps/slack-bot/src/listeners/actions/: __init__.py  agent_select.py  channel_config.py  link_buttons.py  mcp_approval.py
apps/slack-bot/src/listeners/assistant/: __init__.py  assistant_thread_started.py  message.py
apps/slack-bot/src/listeners/commands/: __init__.py  ask_agent.py  list_tasks.py
apps/slack-bot/src/listeners/events/: __init__.py  app_home.py  app_lifecycle.py  app_mention.py  channel_membership.py  message.py
apps/slack-bot/src/utils/: __init__.py  blocks.py  formatters.py  helpers.py
apps/webhook/: .dockerignore  Dockerfile  README.md  package.json  pyproject.toml  test_webhook.py
apps/webhook/src/: __init__.py  app.py  client.py  constants.py  formatters.py  models.py  server.py
docs/: SLACK_INTEGRATION_PLAN.md  workspace-hardening.md  (+1 more)
(+464 files in other folders)
