[project]
name = "slack-bot"
version = "0.1.0"
description = "Slack bot for two-way sync with AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "slack-bolt>=1.21.2",
    "slack-sdk>=3.33.4",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "restack-ai>=0.0.114",
    "asyncpg>=0.29.0",
    "watchfiles>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.5",
]

